近期的一些samples